tests/models/enum/named/isize/pass/alias.rs
use dade::model;
#[model]
enum TestModel {
    Value {
        #[field(alias = "val")]
        value: isize
    },
}
fn main() {}
